# hw1-project

./: build.gradle  build.sh  hw1_workload_A3.xls  install.sh  patch.sh  record_A3.xlsx  run.sh
envs/: env_android26.sh  env_android27.sh
platform-tool/: A3.te  Android.mk  initRC.sh
platform-tool/aosp6.0/: new_init.rc
src/: SampleService.cpp  patch.sh
src/apk/: Android.mk  Application.mk  MainActivity.java  Myjni.h  Myjni.java  android.mk  app-debug.apk.1  app-release.apk.1  com_example_a804596442_myapplication_Myjni.h  hello.cpp
src/apk/COUNTER_MyApplication/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
src/apk/COUNTER_MyApplication/app/src/main/: AndroidManifest.xml
src/apk/COUNTER_MyApplication/gradle/wrapper/: gradle-wrapper.properties
src/apk/MyApplication1/app/: build.gradle
src/apk/MyApplication1/app/src/main/: AndroidManifest.xml
src/apk/MyApplication1/gradle/wrapper/: gradle-wrapper.properties
src/apk/myapplication/: com_example_myapplication_CserviceInterface.h
src/apk/myapplication/myapplication/: build.gradle
src/app/: build.gradle
src/app/src/main/: AndroidManifest.xml
src/app/src/main/cpp/: native-lib.cpp
src/app/src/main/service/: Android.mk  JACK_Service.cpp  JACK_Service.h
src/app/src/main/svcclient/: Android.mk  JACK_Client.cpp  JACK_Client.h
src/app/src/main/svcserver/: Android.mk  JACK_server.cpp
src/app/src/main/testcpp/: Android.mk  test.cpp
src/service/: CMakeLists.txt  com_example_myapplication_CserviceInterface.h  native-lib.cpp  test_client.c  test_server.c  test_server.h
(+26 files in other folders)
